--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,7 @@
     "dependencies": {
         "polymer": "Polymer/polymer#1.3.1",
         "cbn-main-page": "git@bitbucket.org:cbn-it/cbn-main-page#master",
-        "cbn-grid": "git@bitbucket.org:cbn-it/cbn-grid#polymer1.0",
+        "cbn-grid": "git@bitbucket.org:cbn-it/cbn-grid#master",
         "paper-dialog": "PolymerElements/paper-dialog#1.0.4",
         "paper-button": "PolymerElements/paper-button#1.0.11",
         "iron-ajax": "PolymerElements/iron-ajax#1.2.0",
